// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAsset component renders collectible view correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 0,
    }
  }
  testID="add-collectible-screen"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        false,
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 8,
                  "height": 32,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 32,
                },
                undefined,
              ]
            }
            testID="button-icon"
          >
            <SvgMock
              fill="currentColor"
              name="ArrowLeft"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Import NFT
        </Text>
      </View>
    </View>
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
    testID="add-asset-nft-banner"
  >
    <View
      style={
        {
          "backgroundColor": "#9a63001a",
          "borderColor": "#9a6300",
          "borderLeftWidth": 4,
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 12,
          "paddingLeft": 8,
        }
      }
      testID="banneralert"
      variant="Alert"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
      >
        <SvgMock
          color="#9a6300"
          fill="currentColor"
          height={24}
          name="Danger"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="warning-display-media-enabled-text"
        >
          Displaying NFT media and data may expose your IP address to centralized servers. Only import an NFT if you understand the risks involved.
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
    testID="add-asset-network-selector"
  >
    <TouchableOpacity
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 16,
          "marginTop": 4,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "display": "flex",
              "marginRight": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "height": 24,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": 24,
            }
          }
          testID="select-network-button"
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source="ethereum"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            testID="network-avatar-image"
          />
        </View>
      </View>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "absolute",
              "right": 0,
            },
            undefined,
          ]
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 24,
              "justifyContent": "center",
              "opacity": 1,
              "width": 24,
            }
          }
          testID="select-network-button"
        >
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={16}
            name="ArrowDown"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
        </TouchableOpacity>
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    testID="import-nft-screen"
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        automaticallyAdjustContentInsets={false}
        contentInset={
          {
            "bottom": 0,
          }
        }
        enableAutomaticScroll={true}
        enableOnAndroid={false}
        enableResetScrollToCoords={true}
        extraHeight={75}
        extraScrollHeight={0}
        getScrollResponder={[Function]}
        handleOnScroll={[Function]}
        keyboardDismissMode="interactive"
        keyboardOpeningTime={250}
        keyboardShouldPersistTaps="never"
        keyboardSpace={0}
        onScroll={[Function]}
        resetKeyboardSpace={[Function]}
        resetScrollToCoords={
          {
            "x": 0,
            "y": 0,
          }
        }
        scrollEventThrottle={1}
        scrollForExtraHeightOnAndroid={[Function]}
        scrollIntoView={[Function]}
        scrollToEnd={[Function]}
        scrollToFocusedInput={[Function]}
        scrollToPosition={[Function]}
        showsVerticalScrollIndicator={true}
        style={
          [
            {
              "flex": 1,
            },
            undefined,
          ]
        }
        update={[Function]}
        viewIsInsideTabBar={false}
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              style={
                {
                  "paddingHorizontal": 16,
                  "paddingVertical": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "paddingBottom": 3,
                  }
                }
              >
                Address
              </Text>
              <TextInput
                keyboardAppearance="light"
                onBlur={[Function]}
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="0x..."
                placeholderTextColor="#b7bbc8"
                style={
                  [
                    {
                      "borderColor": "#b7bbc8",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "padding": 16,
                    },
                    {},
                  ]
                }
                testID="input-collectible-address"
                value=""
              />
              <Text
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "Geist-Regular",
                    "marginTop": 15,
                  }
                }
                testID="collectible-address-warning"
              />
            </View>
            <View
              style={
                {
                  "paddingHorizontal": 16,
                  "paddingVertical": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "paddingBottom": 3,
                  }
                }
              >
                ID
              </Text>
              <TextInput
                keyboardAppearance="light"
                keyboardType="numeric"
                onBlur={[Function]}
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter the collectible ID"
                placeholderTextColor="#b7bbc8"
                style={
                  [
                    {
                      "borderColor": "#b7bbc8",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "padding": 16,
                    },
                    {},
                  ]
                }
                testID="input-collectible-identifier"
                value=""
              />
              <Text
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "Geist-Regular",
                    "marginTop": 15,
                  }
                }
                testID="collectible-identifier-warning"
              />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 16,
              "paddingBottom": 16,
              "paddingHorizontal": 16,
              "paddingTop": 24,
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#3c4d9d0f",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID=""
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={true}
          loading={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="add-collectible-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Import
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AddAsset component renders token view correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 0,
    }
  }
  testID="add-token-screen"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        false,
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 8,
                  "height": 32,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 32,
                },
                undefined,
              ]
            }
            testID="button-icon"
          >
            <SvgMock
              fill="currentColor"
              name="ArrowLeft"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Import tokens
        </Text>
      </View>
    </View>
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "display": "flex",
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
    testID="add-asset-network-selector"
  >
    <TouchableOpacity
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 16,
          "marginTop": 4,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "display": "flex",
              "marginRight": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "height": 24,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": 24,
            }
          }
          testID="select-network-button"
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source="ethereum"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            testID="network-avatar-image"
          />
        </View>
      </View>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "absolute",
              "right": 0,
            },
            undefined,
          ]
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 24,
              "justifyContent": "center",
              "opacity": 1,
              "width": 24,
            }
          }
          testID="select-network-button"
        >
          <SvgMock
            color="#121314"
            fill="currentColor"
            height={16}
            name="ArrowDown"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
        </TouchableOpacity>
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
    testID="add-asset-loading-indicator"
  >
    <ActivityIndicator
      color="#4459ff"
      size="large"
    />
  </View>
</RNCSafeAreaView>
`;
